# harmless

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  README.rst  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: test.yml
docs/: conf.py  harmless.rst  index.rst  modules.rst  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: harmless.io.rst  harmless.rst  harmless.scripts.rst
docs/source/pages/: readme.rst  references.rst
harmless/: __init__.py  diagnostics.py  fluid.py  grid.py  io.py  parallelize.py
harmless.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
harmless/io/: __init__.py  base.py  grid.py  iharm2d_v4.py  iharm3d.py  kharma.py
harmless/scripts/: generate_grid.py  harmless_generate_grid.py  kharma_convert.py
scripts/: harmless_generate_grid.py
tests/: conftest.py  test_fluid.py  test_grid.py
