[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2"]

[project]
name = "harmless"
version = "1.0.0"
description = "Python tools to perform reductions on HARM data products"
readme = "README.rst"
keywords = ["harm", "analysis", "grmhd"]
authors = [{name="Vedant Dhruv", email="vdhruv2@illinois.edu"}]
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "scipy",
  "h5py",
  "matplotlib",
  "psutil",
  "click>=8.0",
]

[project.optional-dependencies]
interactive = ["jupyter"]
docs = [
  "sphinx>=4.2.0",
  "sphinx-rtd-theme",
  "readthedocs-sphinx-search",
]
dev = [
  "pytest",
]

[project.scripts]
harmless-generate-grid  = "harmless.scripts.generate_grid:make_grid"
harmless-kharma-convert = "harmless.scripts.kharma_convert:convert"