[metadata]
name = harmless
version = 1.0.0
description = Python tools to perform reductions on HARM data products
long_description = file: README.md
long_description_content_type = text/markdown
keywords = harm, analysis, grmhd
author = Vedant Dhruv
author_email = vdhruv2@illinois.edu
license = BSD 3-Clause License

[options]
python_requires = >=3.6
install_requires =
  numpy 
  h5py
  psutil
  scipy
  matplotlib
  click

[options.entry_points]
console_scripts =
  write-grid = harmless.scripts.write_grid:main

[options.extras_require]
interactive = jupyter