[metadata]
name = harmless
version = attr: harmless.__version__
description = Python tools to perform reductions on HARM data products
long_description = file:README.md
keywords = harm, analysis, grmhd
author = Vedant Dhruv
authod_email = vdhruv2@illinois.edu
license_files = file:LICENSE

[options]
packages = find:
python_requires = >3.6
install_requires = 
  numpy
  scipy
  h5py
  matplotlib
  psutil
  sphinx
  click

[options.packages.find]
where = .

[options.extras_require]
notebook = jupyter>=1.0.0

[options.entry_points]
console_scripts=
  harmless-generate-grid = harmless.scripts.harmless_generate_grid:main